# Muse

./: .gitignore  .npmrc  .prettierignore  README.md  eslint.config.js  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  BrandMark.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/auth/: LoginScreen.tsx  client.ts
apps/desktop/src/local-tools/: bridge.ts
apps/mobile/: index.html  package.json  vite.config.ts
apps/mobile/src/: App.tsx  BrandMark.tsx  styles.css
apps/mobile/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
apps/mobile/src-tauri/capabilities/: default.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: lib.rs  main.rs
apps/mobile/src/auth/: LoginScreen.tsx  (+1 more)
apps/server/: .env.example  package.json  tsconfig.json
apps/server/src/: server.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
docs/: architecture.md  auth-implementation-plan.md  cross-device-approval-implementation-plan.md  database-design.md  local-tools-agent-implementation-plan.md  local-tools-call-chain.md  mariadb-migration-plan.md  mobile-ios-implementation-plan.md  project-risk-review.md  realtime-session-sync-implementation-plan.md
scripts/: muse-dev-desktop.mjs  prepare-desktop-icon.swift
(+38 files in other folders)
