[package]
name = "muse-desktop"
version = "0.1.0"
description = "Muse desktop client"
authors = ["wojustme"]
edition = "2021"

[lib]
name = "muse_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
